# sr-detection

./: .0pdd.yml  .flake8  .gitattributes  .gitignore  .markdownlint.yml  .pylintrc  .rultor.yml  .yamllint.yml  Dockerfile  README.md  _typos.toml  data.sh  extract-2024-05-01-2024-05-02.csv  filter-2024-05-01-2024-05-02.csv  ghminer.graphql  ghminer.json  ignore.ghiqc  justfile  pyproject.toml  pytest.ini  repos.csv  results.txt
.github/: _typos.toml
.github/workflows/: actionlint.yml  build.yml  cluster.yml  codecov.yml  collect.yml  copyrights.yml  datasets.yml  docker.yml  ghiqc.yml  just.yml  latexmk.yml  markdown-lint.yml  merge.yml  metadata.yml  nightly.yml  pdd.yml  poetry.yml  typos.yml  yamllint.yml  year.yml
0.0.33/: d0-numerical.csv  d1-scores.csv
0.0.33/steps/: 01-repos.csv  02-repos-with-pulls.csv  03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv
0.0.34/: d0-numerical.csv  d1-scores.csv
0.0.34/steps/: 03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv
0.0.35/: d0-numerical.csv  d1-scores.csv  filtered.txt
0.0.35/steps/: 01-repos.csv  02-repos-with-pulls.csv  03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv
2023/: d1-scores.csv
2024/: d1-scores.csv
2024-0103/: d1-scores.csv
2024-0103-j/: d0-numerical.csv  d1-scores.csv
2024-0103-j/steps/: 01-repos.csv  02-repos-with-pulls.csv  03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv
2024-0103-w/: d0-numerical.csv  d1-scores.csv
2024-0105/: d0-numerical.csv  d1-scores.csv
2024-0105-n/: d0-numerical.csv  d1-scores.csv
2024-0105-n/steps/: 03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv
2024-0105/steps/: 03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv
2024-0106-java-rust/: d1-scores.csv
2024-01~03/: d0-numerical.csv  d1-scores.csv  filtered.txt
2024-01~03/steps/: 01-repos.csv  02-repos-with-pulls.csv  03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv
2024-01~06/: d0-numerical.csv  d1-scores.csv  filtered.txt
2024-01~06/steps/: 03-after-filter.csv
2024-0309/: d1-scores.csv
2024-05-01-02-test/: after-extract.csv  after-maven.csv  repos-with-pulls.csv
2024-0512/steps/: 03-after-filter.csv
2024-06~10/: d0-numerical.csv  d1-scores.csv
2024-06~10/steps/: 01-repos.csv  02-repos-with-pulls.csv  03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv  filtered.txt
2024-06~2025-01/: filtered.txt
2024-06~2025-01/steps/: 03-after-filter.csv
2024-0710-maven/: after-extract.csv  after-filter.csv  after-maven.csv  repos-with-pulls.csv  repos.csv
2024-0911/: d1-scores.csv  d5-scores+sbert.csv
2024-0911/steps/: 01-repos.csv  02-repos-with-pulls.csv  03-after-filter.csv  04-after-extract.csv  05-embeddings-s-bert-384.csv
2024-10/: after-maven.csv
2024-10~2025/: d0-numerical.csv  d1-scores.csv
2024-10~2025/steps/: 03-after-filter.csv  04-after-workflows.csv  05-after-junit.csv  filtered.txt
2024-j/: d0-numerical.csv  d1-scores.csv
2024-repos/: final.csv
2024-repos/steps/: 02-after-license-filter.csv  03-repos-with-pulls.csv  04-after-filter.csv  05-after-mcw.csv  06-after-swc.csv  07-after-extract.csv  08-after-snippets.csv  09-after-maven.csv  10-after-junit.csv  11-after-lens.csv  12-after-links.csv  13-after-ghmentions.csv
2024-test/: d1-scores.csv
links-test/: final.csv
links-test/steps/: after-extract.csv  (+2 more)
log-testing/: after-maven.csv
path-test/: after-extract.csv  after-maven.csv  after-swc.csv
sr-cli/: pyproject.toml
sr-data/: LICENSE.txt  README.md  pyproject.toml
sr-data/resources/: ghminer.json  pipeline.json  swc-words.txt
sr-data/src/sr_data/: all.py  filtered.py  pipeline.py
sr-data/src/sr_data/steps/: __init__.py  cluster.py  combination.py  embed.py  extract.py  filter.py  final.py  gh_mentions.py  hnum.py  junit_tests.py  label_propagation.py  labels.py  lens.py  license_filter.py  links.py  maven.py  mcw.py  merge.py  no_readme.py  numerical.py  pulls.py  scores.py  sentiments.py  snippets.py  special_words_count.py  swc.py  tests.py  workflows.py
sr-data/src/sr_data/tasks/: collect.py  embed.py  extract.py  filter.py  highlight.py
sr-data/src/sr_data/verifications/: install.py
sr-data/src/tests/: embed.csv  embeddings.csv  test.csv  test_cluster.py  test_combination.py  test_embed.py  test_extract.py  test_filter.py  test_filtered.py  test_final.py  test_ghmentions.py  test_junit_tests.py  test_label_propagation.py  test_labels.py  test_lens.py  test_license_filter.py  test_links.py  test_maven.py  test_mcw.py  test_numerical.py  test_pipeline.py  test_pulls.py  test_scores.py  test_sentiments.py  test_snippets.py  test_swc.py  test_workflows.py  to-embed.csv  to-extract.csv  to-final-empty.csv  to-final.csv  to-maven-non-maven.csv  to-maven.csv  to-mcw.csv
sr-data/src/tests/resources/: scores.csv  to-cluster.csv  to-count-tests.csv  to-extract-hnum.csv  to-extract-null-headings.csv  to-final-empty.csv  to-final.csv  to-ghmentions-empty.csv  to-ghmentions.csv  to-has-workflows.csv  to-license-filter.csv  to-links.csv  to-maven-skip.csv  to-maven-without-artifact.csv  to-numerical.csv  to-pull.csv  to-score.csv  to-sentiments.csv  to-snippets.csv  to-unique-oss.csv  to-words.md  to-workflows.csv  to-wscore.csv  training.csv
sr-detector/: pyproject.toml
sr-filter/: README.md  pyproject.toml
sr-filter/src/sr/: sr.py
sr-filter/src/sr/resources/: toolchain.json
sr-paper/: README.md  main.bib
sr-train/: pyproject.toml
test-junit/: final.csv
test-license-filter/: final.csv
test-maven/: after-extract.csv  after-maven.csv  repos.csv
test-names/: final.csv
test-snippets/: final.csv
test-with-mcw/: after-extract.csv  after-maven.csv  after-mcw.csv  after-swc.csv
testing-10-03/: after-extract.csv  after-filter.csv  repos-with-pulls.csv  repos.csv
testing-datasets/: d1-scores.csv  d2-sbert.csv  d3-e5.csv  d5-scores+sbert.csv  d6-scores+e5.csv  d7-scores+embedv3.csv
testing-docker/: d1-scores.csv  d2-sbert.csv  d5-scores+sbert.csv  d6-scores+e5.csv  d7-scores+embedv3.csv
testing-final/: final.csv
(+461 files in other folders)
