# The MIT License (MIT)
#
# Copyright (c) 2024 Aliaksei Bialiauski
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
[tool.poetry]
name = "sr-data"
version = "0.0.0"
description = "GitHub repositories data to vectors"
authors = ["h1alexbel <aliaksei.bialiauski@hey.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sr_data", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10 || ^3.11 || ^3.12"
langdetect = "^1.0.9"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
markdown = "^3.6"
requests = "^2.32.3"
nltk = "^3.9.1"
scikit-learn = "^1.5.1"
cohere = "^5.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poe.tasks.filter]
script = "sr_data.tasks.filter:main(repos, out)"
args = [{name = "repos"}, {name = "out"}]

[tool.poe.tasks.extract]
script = "sr_data.tasks.extract:main(repos, out)"
args = [{name = "repos"}, {name = "out"}]

[tool.poe.tasks.tfidf]
script = "sr_data.tasks.tfidf:main(repos, out)"
args = [{name = "repos"}, {name = "out"}]

[tool.poe.tasks.embed]
script = "sr_data.tasks.embed:main(repos, prefix, hf, cohere)"
args = [ {name = "repos"}, {name = "prefix"}, {name = "hf"}, {name = "cohere"} ]

[tool.poetry.scripts]
sr-data = "sr_data.all:main"
highlight = "sr_data.tasks.highlight:main"
embed = "sr_data.tasks.embed:main"
u = "sr_data.tasks.u:main"
v = "sr_data.tasks.v:main"
w = "sr_data.tasks.w:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
