# The MIT License (MIT)
#
# Copyright (c) 2024 Aliaksei Bialiauski
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
[tool.poetry]
name = "sr-filter"
version = "0.0.45"
description = "Command-line SR toolchain"
authors = ["h1alexbel <h1alexbelx@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sr", from = "src"}]

[tool.poetry.scripts]
sr-filter = "sr.sr:main"

[tool.poetry.dependencies]
sr-data = "0.0.45"
python = "==3.10.* || ==3.11.* || ==3.12.*"
loguru = "^0.7.3"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
